/*
this is the Mebius Project
*/
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.LTitan.Mebius.pkg.apis;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/LTitan/Mebius/pkg/apis";

// +kubebuilder:obeject:root=true
// +kubebuilder:resource:path=cluster
// +genclient
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message Cluster {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ClusterSpec spec = 2;

  optional ClusterStatus status = 3;
}

message ClusterCondition {
  optional string type = 1;

  optional string status = 2;

  optional k8s.io.apimachinery.pkg.apis.meta.v1.Time creat_time = 3;

  optional k8s.io.apimachinery.pkg.apis.meta.v1.Time update_time = 4;
}

// +kubebuilder:obeject:root=true
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message ClusterList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  repeated Cluster items = 2;
}

message ClusterSpec {
  // +optional
  map<string, string> attributes = 1;
}

message ClusterStatus {
  repeated ClusterCondition condition = 1;
}

